@@ -1,5 +1,7 @@
 Revision history for MsOffice-Word-Surgeon
 
+  - unlink_fields : better algorithm for ASK fields
+
 2.06    03.06.2024
   - refactoring for fields and bookmark boundaries
   - new methods replace_fields() and reveal_fields()
